src/input.css
/* ... */
/* LiteralNumberFloat */  .mf { color: #009999 }
/* LiteralNumberHex */  .mh { color: #009999 }
/* LiteralNumberInteger */  .mi { color: #009999 }
/* LiteralNumberIntegerLong */  .il { color: #009999 }
/* LiteralNumberOct */  .mo { color: #009999 }
/* Operator */  .o { color: #cf222e; font-weight: bold }
/* OperatorWord */  .ow { color: #cf222e; font-weight: bold }
/* Punctuation */  .p {  }
/* Comment */  .c { color: #999988; font-style: italic }
/* CommentHashbang */  .ch { color: #999988; font-style: italic }
/* CommentMultiline */  .cm { color: #999988; font-style: italic }
/* CommentSingle */  .c1 { color: #999988; font-style: italic }
/* CommentSpecial */  .cs { color: #999999; font-weight: bold; font-style: italic }
/* CommentPreproc */  .cp { color: #999999; font-weight: bold; font-style: italic }
/* CommentPreprocFile */  .cpf { color: #999999; font-weight: bold; font-style: italic }
/* Generic */  .g {  }
/* GenericDeleted */  .gd { color: #cf222e; background-color: #ffdddd }
/* GenericEmph */  .ge { color: #cf222e; font-style: italic }
/* GenericError */  .gr { color: #aa0000 }
/* GenericHeading */  .gh { color: #999999 }
/* GenericInserted */  .gi { color: #cf222e; background-color: #ddffdd }
/* GenericOutput */  .go { color: #888888 }
/* GenericPrompt */  .gp { color: #555555 }
/* GenericStrong */  .gs { font-weight: bold }
/* GenericSubheading */  .gu { color: #aaaaaa }
/* GenericTraceback */  .gt { color: #aa0000 }
/* GenericUnderline */  .gl { text-decoration: underline }
/* TextWhitespace */  .w { color: #bbbbbb }

p {
    @apply text-justify py-2;
}

h1 {
    @apply text-4xl md:text-5xl font-bold py-10;
}

h2 {
    @apply text-3xl md:text-4xl font-semibold py-5;
}

h3 {
    @apply text-xl md:text-2xl font-semibold py-4;
}

h4 {
    @apply text-xl md:text-2xl font-semibold py-4;
}

h5 {
    @apply text-xl md:text-2xl font-semibold py-4;
}

h6 {
    @apply text-sm !text-center pb-5;
}

img {
    @apply !text-center my-5 rounded-lg;
}

blockquote {
    @apply grid border-l text-gray-800 border-gray-800 text-justify italic dark:border-gray-300 dark:text-gray-300;
}

blockquote > p {
    @apply pl-5 md:pl-10 text-justify italic;
}

.blog-title {
    @apply text-xl font-semibold pb-5 pt-1;
}

.syntax-all {}

.syntax-entity {
    color: #8250df;
}

.syntax-tag {
    color: #cf222e;
}

.syntax-keyword {
    color: #cf222e;
}

.syntax-parameter {
    color: #24292f;
}

.syntax-string {
    color: #0a3069;
}

.syntax-constant {
    color: #0550ae;
}

.syntax-variable {
    color: #b44701;
}

.syntax-escape {
    color: #8250df;
}

.syntax-comment {
    color: #6e7781;
}

.syntax-error {
    color: #f8f8f0;
    background: #f92672;
    padding: 2px 6px;
}

code {
    font-family: 'Courier', monospace;
    font-size: 80%;
    color: #24292f;
}

p>code {
    padding: 0.5em 0.5em;
    background: #f6f8fa;
    border-radius: 5px;
}

pre {
    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
    color: #24292f;
    text-align: left;
    line-height: 1.2em;
    overflow-x: scroll;
    background: #f6f8fa;
    padding: 20pt;
    margin: 20pt 0;
    /*border: #000;*/
    border-style: solid;
    border-width: 0px;
    border-radius: 6px;
    /* border-color: #d0d7de; */
    white-space: pre-wrap;
    tab-size: 4;
}

.dark code {
    font-family: 'Courier', monospace;
    font-size: 80%;
    color: #f8f8f2;
}

.dark p>code {
    padding: 0.5em 0.5em;
    background: #0d1117;
    border-radius: 5px;
}

.dark pre {
    color: #c9d1d9;
    text-align: left;
    line-height: 1.2em;
    overflow-x: scroll;
    background: #0d1117;
    padding: 20pt;
    margin: 20pt 0;
    border-radius: 3pt;
    white-space: pre-wrap;
    tab-size: 4;
}

.dark .dark\:syntax-all {}

.dark .dark\:syntax-entity {
    color: #d2a8ff;
}

.dark .dark\:syntax-tag {
    color: #fd7a71;
}

.dark .dark\:syntax-keyword {
    color: #fd7a71;
}

.dark .dark\:syntax-parameter {
    color: #c9d1d9;
}

.dark .dark\:syntax-string {
    color: #a5d6ff;
}

.dark .dark\:syntax-constant {
    color: #79c0ff;
}

.dark .dark\:syntax-variable {
    color: #ffa567;
}

.dark .dark\:syntax-escape {
    color: #d2a8ff;
}

.dark .dark\:syntax-comment {
    color: #8b949e;
}

.dark .dark\:syntax-error {
    color: #f8f8f0;
    background: #f92672;
    padding: 2px 6px;
}

